# dialogue-system-using-latent-tasks

./: .gitignore  Dockerfile  chatbot.py  doc.md  latent_task_module.py  name_to_prompt.py  pyproject.toml  requirements.txt
pages/: chatbot.py
