[tool.poetry]
name = "latent-tasks-dialogue-system"
version = "0.1.0"
description = ""
authors = ["mersakakey <75288670+mersakakey@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "latent_tasks_dialogue_system"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.26.0"
langchain = "^0.0.283"
openai = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
